force-app/main/default/objects/Case_Field_Mapping__c/Case_Field_Mapping__c.object-meta.xml
<CustomObject>
    <description>The Case Field Mapping object drives config-based copying of Opportunity or Account values onto a Case at creation, via Source Object, Source Field Path, and Target Field API Name; Record Type Developer Name scopes each mapping and Is Active toggles it. Used for B2B Implementation and Deal Support Case automation.</description>
    <label>Case Field Mapping</label>
    <nameField>
        <label>Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>