force-app/main/default/objects/Case_Field_Mapping__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>Case Type value (e.g. Bid Management, Legal, InfoSecurity) this mapping is further scoped to within its Record Type. Blank = applies to every Case Type within the Record Type. A Record Type can span many Case Types (e.g. Deal_Support covers Bid Management, Legal, InfoSecurity, and others), so this prevents a Case-Type-specific field from leaking onto unrelated Case Types that share the same Record Type.</description>
    <label>Case Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>