force-app/main/default/objects/Case_Field_Mapping__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Admin notes / traceability back to the source requirements doc. For documentation only.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>