force-app/main/default/objects/Case_Field_Mapping__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only active mappings are applied at runtime.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>