force-app/main/default/objects/Case_Field_Mapping__c/fields/Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Developer_Name__c</fullName>
    <description>Case Record Type API name this mapping applies to (e.g. B2B_Implementation, Deal_Support). Blank = applies to every eligible Case Record Type.</description>
    <label>Record Type Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>