force-app/main/default/objects/Case_Field_Mapping__c/fields/Source_Field_Path__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_Path__c</fullName>
    <description>A field API name on the Source Object selected above, e.g. Amount if Source Object = Opportunity. Also supports exactly one relationship hop off the Source Object using SOQL dot-notation, e.g. Billing_Country__r.Region__c (Opportunity) or Parent.Industry (Account). More than one dot is not supported.</description>
    <label>Source Field Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>