force-app/main/default/objects/Case_Field_Mapping__c/fields/Target_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_API_Name__c</fullName>
    <description>The Case field API name this value is copied into. Must be a real, writable (non-formula) field on Case.</description>
    <label>Target Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>