force-app/main/default/objects/Case_Field_Mapping__c/listViews/Active_Mappings.listView-meta.xml
<ListView>
    <fullName>Active_Mappings</fullName>
    <columns>NAME</columns>
    <columns>Record_Type_Developer_Name__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Source_Object__c</columns>
    <columns>Source_Field_Path__c</columns>
    <columns>Target_Field_API_Name__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Mappings</label>
</ListView>